table scrollbar and pagination issues fixed

--- a/src/components/table/table.css
+++ b/src/components/table/table.css
@@ -234,12 +234,17 @@ tfoot td {
 }
 .tableFixHead {
   overflow: auto;
-  height: calc(100vh - 400px);
+  height: calc(100vh - 355px);
   scrollbar-width: thin;
   scrollbar-color: #afaeae #e3e1e1;
-  border: 1px solid #dee2e6;
-  overflow: hidden;
+  border-top: 1px solid #dee2e6;
+  overflow-x: hidden;
+  border-bottom: 0;
+}
+.tableFixHead table {
   background-color: #fff;
+  border-left: 1px solid #dee2e6;
+  border-right: 1px solid #dee2e6;
 }
 .tableFixHead::-webkit-scrollbar {
   width: 5px;
